Fix Lab 3: Add exports and remove NATS/etcd from main flow
Environment variable fixes:
- Add 'export' to all NAMESPACE and NODE_IP declarations
- Ensure variables are set before use in all cells
- Fix NodePort service creation cell (line 354)
- Fix test deployment cell (line 408)
- Fix traffic generation cell (line 459)
- Fix worker logs cell (line 597)
- Fix cleanup cells (lines 667, 681)
- Fix troubleshooting cells (lines 798, 817, 837)

NATS/etcd cleanup:
- Remove NATS Health Check section (wasn't deployed)
- Remove etcd Health Check section (wasn't deployed)
- Update worker logs to only check NIXL (not NATS)
- Clarify K8s-native discovery in log messages
- Keep NATS/etcd content in Appendix B only

This lab uses K8s-native deployment - no NATS/etcd required

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81388379",
+   "id": "d05f208c",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "339def64",
+   "id": "a05f765b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c2c377",
+   "id": "ef63d182",
    "metadata": {},
    "source": [
     "---\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b6a0912",
+   "id": "09825674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655dcd77",
+   "id": "e82adfcf",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "002864b2",
+   "id": "f17469a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07cd5793",
+   "id": "51de7b64",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afd94a1b",
+   "id": "f833dd00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded47f1f",
+   "id": "7883b70a",
    "metadata": {},
    "source": [
     "---\n",
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9ab2011",
+   "id": "15a697b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d6ed3e",
+   "id": "8fdd341d",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -413,11 +413,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ceaf792",
+   "id": "a84cee86",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "\n",
     "# Create NodePort service\n",
     "cat <<'EOF' | kubectl apply -f -\n",
     "apiVersion: v1\n",
@@ -445,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c529bbe9",
+   "id": "db2cd2bb",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -454,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d31b48",
+   "id": "b58bd3ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +466,7 @@
     "echo \"This may take 2-3 minutes for model download and initialization...\"\n",
     "echo \"\"\n",
     "\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Wait for pods to be ready\n",
     "kubectl wait --for=condition=ready --timeout=300s \\\n",
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ee2ef14",
+   "id": "efcad325",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -490,14 +492,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc2d72a3",
+   "id": "8572d416",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Test the deployment\n",
     "echo \"Testing inference...\"\n",
-    "NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "\n",
     "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e27cc24",
+   "id": "4689c9a6",
    "metadata": {},
    "source": [
     "---\n",
@@ -530,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d83c6027",
+   "id": "54defa31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b2db7d",
+   "id": "fd327d0f",
    "metadata": {},
    "source": [
     "### Step 2: Test Distributed Dynamo with Traffic\n",
@@ -567,14 +569,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9db2a304",
+   "id": "5a4e6e2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Generate test traffic with concurrent requests\n",
     "echo \"Generating traffic to distributed Dynamo deployment...\"\n",
-    "NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "\n",
     "# Function to send a request\n",
     "send_request() {\n",
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2bb9b52",
+   "id": "088f6caf",
    "metadata": {},
    "source": [
     "---\n",
@@ -719,29 +721,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56461381",
+   "id": "7ea0f0e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Get cache stats from worker logs\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "WORKER_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker,nvidia.com/dynamo-graph-deployment-name=vllm-distributed-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
     "\n",
     "if [ -n \"$WORKER_POD\" ]; then\n",
-    "    echo \"Checking NIXL/NATS activity in worker logs...\"\n",
+    "    echo \"Checking NIXL activity in worker logs...\"\n",
     "    echo \"\"\n",
-    "    kubectl logs -n $NAMESPACE $WORKER_POD --tail=100 | grep -i \"nixl\\|nats\" | tail -10\n",
+    "    kubectl logs -n $NAMESPACE $WORKER_POD --tail=100 | grep -i \"nixl\" | tail -10\n",
     "    \n",
     "    echo \"\"\n",
     "    echo \"Worker pod: $WORKER_POD\"\n",
     "    echo \"\"\n",
     "    echo \"What to look for:\"\n",
     "    echo \"  - NIXL initialization messages (KV cache transfer setup)\"\n",
-    "    echo \"  - NATS connection status (coordination layer)\"\n",
     "    echo \"  - KV cache registration events\"\n",
     "    echo \"  - UCX backend messages (if using RDMA for cache transfer)\"\n",
+    "    echo \"  - K8s service discovery messages\"\n",
     "else\n",
     "    echo \"⚠️ No worker pods found\"\n",
     "    echo \"Make sure the vllm-distributed-demo deployment is running\"\n",
@@ -750,73 +752,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0acb03d4",
+   "id": "8dc761c2",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
     "\n",
-    "### NATS Health Check\n",
-    "\n",
-    "Verify NATS is functioning correctly:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2a303e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# Check NATS service health\n",
-    "echo \"Checking NATS health...\"\n",
-    "kubectl exec -n nats-system nats-0 -- nats-server --version 2>/dev/null || kubectl get pods -n nats-system\n",
-    "\n",
-    "echo \"\"\n",
-    "echo \"NATS endpoints:\"\n",
-    "kubectl get svc -n nats-system"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca28a431",
-   "metadata": {},
-   "source": [
-    "### etcd Health Check\n",
-    "\n",
-    "Verify etcd cluster health:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cca8dfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# Check etcd health\n",
-    "echo \"Checking etcd health...\"\n",
-    "ETCD_POD=$(kubectl get pods -n etcd-system -l app.kubernetes.io/name=etcd -o jsonpath='{.items[0].metadata.name}')\n",
-    "\n",
-    "if [ -n \"$ETCD_POD\" ]; then\n",
-    "    kubectl exec -n etcd-system $ETCD_POD -- etcdctl endpoint health 2>/dev/null || echo \"etcd health check requires auth setup\"\n",
-    "    echo \"\"\n",
-    "    kubectl exec -n etcd-system $ETCD_POD -- etcdctl member list 2>/dev/null || echo \"etcd member list requires auth setup\"\n",
-    "else\n",
-    "    echo \"⚠️ No etcd pods found\"\n",
-    "fi\n",
-    "\n",
-    "echo \"\"\n",
-    "echo \"etcd endpoints:\"\n",
-    "kubectl get svc -n etcd-system"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a1e4aaf",
-   "metadata": {},
-   "source": [
     "---\n",
     "\n",
     "## Section 7: Cleanup\n",
@@ -827,14 +767,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b524bb",
+   "id": "dc96658d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Delete the distributed deployment\n",
     "echo \"Removing distributed Dynamo deployment...\"\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "kubectl delete dynamographdeployment vllm-distributed-demo -n $NAMESPACE\n",
     "kubectl delete svc vllm-distributed-demo-frontend-np -n $NAMESPACE\n",
@@ -844,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b521fa7f",
+   "id": "48981ed0",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -855,14 +795,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fe82f4",
+   "id": "d6b12f8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Check Lab 1 deployment status\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "\n",
     "echo \"Checking Lab 1 deployment...\"\n",
     "kubectl get dynamographdeployment vllm-disagg-router -n $NAMESPACE\n",
@@ -880,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a5d50c2",
+   "id": "6a6894ab",
    "metadata": {},
    "source": [
     "---\n",
@@ -985,13 +925,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efd77070",
+   "id": "26536dc3",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Check deployment status\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "kubectl describe dynamographdeployment vllm-distributed-demo -n $NAMESPACE\n",
     "\n",
     "# Check pod status\n",
@@ -1008,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e3b8a1",
+   "id": "19c9d2b9",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1017,13 +957,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98dffed6",
+   "id": "1d96e6f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Check K8s services and endpoints\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "kubectl get svc -n $NAMESPACE\n",
     "kubectl get endpoints -n $NAMESPACE\n",
     "\n",
@@ -1041,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21eb2a7e",
+   "id": "3c05c351",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1050,13 +990,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f68f01",
+   "id": "f85aa814",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Test frontend endpoint\n",
-    "NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "curl -v http://$NODE_IP:30200/v1/models\n",
     "\n",
     "# Check frontend logs\n",
@@ -1073,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4387bb8f",
+   "id": "95404d1d",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1214,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb0f36d5",
+   "id": "70a5f5be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd72bda",
+   "id": "faa76087",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1260,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d5636a8",
+   "id": "73849731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6691f1d",
+   "id": "20ee8c61",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1303,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab9c484",
+   "id": "ddd15ef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4cf24c",
+   "id": "45a72b85",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1347,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "609a1182",
+   "id": "8a35e20f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb8712a7",
+   "id": "4101829a",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1408,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c519973",
+   "id": "8177573b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fe0d5a0",
+   "id": "cf9c542c",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
